# modelq

./: README.md  cache.db  pyproject.toml  requirements-test.txt  test.py
.github/workflows/: cd.yml  ci.yml
celery_ml/: __init__.py
celery_ml/app/: __init__.py  base.py
celery_ml/app/cache/: base.py
celery_ml/app/middleware/: __init__.py
celery_ml/app/tasks/: base.py
examples/: additional_params_demo.py  pydantic_demo.py  sentry_demo.py  task_history_demo.py
examples/fastapi/: app.py  cache.db  lmao.py  server_id.txt  tasks.py
examples/server2/: app.py  cache.db  tasks.py
examples/text-streaming-server/: tasks.py
modelq/app/: base.py
modelq/app/api/: server.py
modelq/app/backends/: base.py
modelq/app/backends/redis/: __init__.py  backend.py
modelq/app/cache/: base.py
modelq/app/cli/: main.py
modelq/app/tasks/: base.py
modelq/app/utils/: compression.py
tests/: test_base.py  test_compression.py
